--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Package to query and retrieve Brazilian foreign trade statistics from the Comex Stat system (comexstat.mdic.gov.br)
+Package to query Brazilian foreign trade statistics from the Comex Stat system (comexstat.mdic.gov.br)
 
 ## Installation
 
